Archive2/57/8ed3cf593d674a/output
main.cpp: In function 'int main()':
main.cpp:24:2: error: static assertion failed: fail
  static_assert (a != b, "fail");
  ^
